# rust-framework

./: Cargo.toml  Readme.md
src/: main.rs  resources.rs
src/controllers/: crud_controller.rs  mod.rs  users.rs
src/db/: in_memory.rs
src/models/: has_id.rs  mod.rs  type_name.rs  user.rs
