[package]
name = "rust-framework"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
paperclip = { version = "0.8", features = ["actix4"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
serde_json = "1.0"
log = "0.4.20"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]